src/components/Title/Title.css
@import '../../style/variable.css';

.title {
  margin-bottom: var(--marginLarge);
}

.title .element {
  color: var(--deepBlue);
  font-size: var(--fontSizeTitle);
  font-weight: var(--fontWeightRegular);
  line-height: 1;
  margin: 0 0 var(--marginSmall);
}

.title .horizontalRule {
  border: 0;
  border-top: 2px solid var(--blue);
  margin: 0;
  width: var(--titleHrWidth);
}

@media (--mobile) {
  .title .element {
    font-size: var(--fontSizeSubtitle);
  }
}

